--- a/odev_2/23015050_odev_2.md
+++ b/odev_2/23015050_odev_2.md
@@ -35,4 +35,15 @@ git push ->**Upstream Repository**
 Farklı dalların birleştirilmesini sağlayan işlem. 
 ## Pull request:
 Yaptığın değişiklikleri main'e eklemek için izin isteme.
+## Clone:
+Bir GitHub reposunun bilgisayara kopyalanması.
+## Push:
+Lokal değişikliklerin GitHub'a gönderilmesi. 
+
+# Git kurduktan sonra yaptıklarım
+Terminalde git config --global user.name ve git config --global user.email ile bilgilerimi ekledim. 
+
+**mkdir** ile yeni klasör, **cd** ile dosya açabiliyorum. git init komutu ile GitHub'da repo başlattım. 
+
+
 
