--- a/odev_2/23015050_odev_2.md
+++ b/odev_2/23015050_odev_2.md
@@ -40,10 +40,30 @@ Bir GitHub reposunun bilgisayara kopyalanması.
 ## Push:
 Lokal değişikliklerin GitHub'a gönderilmesi. 
 
-# Git kurduktan sonra yaptıklarım
-Terminalde git config --global user.name ve git config --global user.email ile bilgilerimi ekledim. 
+İlk başta ödev dosyasında verilen komutları GitHub üzerinden yaptım. Ilayda_Kiraz_YODA_OTONOM_YAZILIM adıyla bir repo oluşturdum, sonra main butonundan create new branch ile odev_2 branchini oluşturdum. create a new file ile 23015050_odev_2.md dosyasını oluşturduktan sonra odev_2/23015050_odev_2.md ile odev_2 klasörünü de oluşturdum. Ardından pull request ile odev_2'yi main branch'e merge ettim. Ayrıca upload file ile birinci ödevimi yükleyip odev_1 klasörü oluşturdum. 
 
-**mkdir** ile yeni klasör, **cd** ile dosya açabiliyorum. git init komutu ile GitHub'da repo başlattım. 
+İkinci olarak bu işlemleri bilgisayarıma kurduğum Git ile yapmayı denedim. Hesabımda YODA adıyla ikinci repoyu görebilirsiniz. Sırasıyla yaptığım işlemleri ve komutların ne işe yaradığını anlatacağım: 
+
+1. cd Desktop/ ile terminalde masaüstüme geldim. 
+2. mkdir komutuyla klasör oluşturdum. **mkdir YODA**
+3. cd YODA ile klasörüme geldim.
+4. git init ile klasörümü git reposu haline getirdim.
+5. git switch -c odev_2 ile branchimi oluşturdum
+6. mkdir odev_2 ile klasör oluşturdum
+7. echo > odev_2/23015050_odev_2.md ile markdown dosyamı oluşturdum
+8. git add ile git'e ekledim
+9. git commit -m "odev_2 klasörü ve 23015050_odev_2.md eklendi." komutuyla yaptığım
+değişikliği anlattım
+10. git push -u origin odev_2 ile ödevimi yüklemiş olacaktım ancak öncesinde github sitesinde YODA adıyla bir repo açmam gerekiyormuş. Hata aldıktan sonra repo oluşturdum ve komutum çalıştı.
+11. odev_2 branchimi merge edebilmek için önce bilgisayarımda main branch açmam gerekiyordu ama github'da açtığım repoda halihazırda main ollduğu için çakışma yaşandı.
+gidermek için git pull origin main --rebase kullandım.
+12. git push -u origin main
+13. git switch main
+14. git merge odev_2
+15. git push origin main
+bu şekilde dosyalarımı github'a aktarmayı başardım.
+
+
 
 
 
