Last update and check

--- a/odev_2/23015050_odev_2.md
+++ b/odev_2/23015050_odev_2.md
@@ -55,14 +55,14 @@ Lokal değişikliklerin GitHub'a gönderilmesi.
 9. git commit -m "odev_2 klasörü ve 23015050_odev_2.md eklendi." komutuyla yaptığım
 değişikliği anlattım
 10. git push -u origin odev_2 ile ödevimi yüklemiş olacaktım ancak öncesinde github sitesinde YODA adıyla bir repo açmam gerekiyormuş. Hata aldıktan sonra repo oluşturdum ve komutum çalıştı.
-11. odev_2 branchimi merge edebilmek için önce bilgisayarımda main branch açmam gerekiyordu ama github'da açtığım repoda halihazırda main ollduğu için çakışma yaşandı.
-gidermek için git pull origin main --rebase kullandım.
+11. odev_2 branchimi merge edebilmek için önce bilgisayarımda main branch açmam gerekiyordu ama github'da açtığım repoda halihazırda main ollduğu için çakışma yaşandı. gidermek için git pull origin main --rebase kullandım.
 12. git push -u origin main
 13. git switch main
 14. git merge odev_2
 15. git push origin main
 bu şekilde dosyalarımı github'a aktarmayı başardım.
 
+> Git ve Github hakkında bilgi edinirken ilk önce "introduction to github" eğitimini tamamladım ve youtubeda Yazılım Portalı kanalından "Versiyon Kontrolü: Git ve GitHub" playlistini izledim. 
 
 
 
