Add multiple Python code examples in markdown

--- a/odev_3/23015050_odev_3.md
+++ b/odev_3/23015050_odev_3.md
@@ -1,4 +1,6 @@
 SAYI TAHMİN
+
+```python
 import random
 
 sayi = random.randint(1, 100) 
@@ -20,10 +22,15 @@ while hak > 0:  #hakkı sıfır olana kadar döngü devam edecek
 
     print(f"{hak} hakkin kaldi\n")
 
-
-KELİME SAYACI
 if hak == 0:
     print(f"Hakkin bitti. Doğru sayi: {sayi}")
+```
+
+
+
+KELİME SAYACI
+
+```python
 
 metin = input("Bir metin giriniz: ")
 metin = metin.lower() #büyük-küçük harf duyarlılığı olmasın diye tüm harfleri küçüğe çevirdim 
@@ -43,8 +50,10 @@ for k in kelime:
 
 for kelime, sayi in kelime_sayilari.items(): #kelimeleri ve kaç kere tekrar ettiğini yazdırdım
     print(f"{kelime}: {sayi}")
+```
 
 HESAP MAKİNESİ
+```python
 while True:
     x = float(input("Birinci sayiyi girin: "))
     y = float(input("İkinci sayiyi girin: "))
@@ -72,8 +81,9 @@ while True:
     if devam.lower() != "e":
         print("Program sonlandirildi.")
         break
-
+```
 BANKA HESABI
+```python
 class Hesap:
     def __init__ (self, user, hesapno, bakiye=0):
         self.user= user
@@ -130,6 +140,5 @@ while True:
 
     else:
         print("Geçerli sayıyı giriniz. (1-4)")
-
-
+```
     
