--- a/odev_3/23015050_odev_3.md
+++ b/odev_3/23015050_odev_3.md
@@ -1,3 +1,118 @@
+## Data tipleri
+Data tipleri arasında değişim yapılabiliyor ama c’de olduğu gibi en başından değişkenlerin data tipini tanımlamamıza gerek yok. 
+İnt: tam sayı
+Float: ondalıklı sayı
+Str: metinler
+List: farklı veri tiplerini bir arada tutabiliyoruz. Değiştirilebiliyor. Liste= [1, 2, ‘ilayda’]
+Tuple: listeyle aynı mantıkta ama değiştirilemiyor. () ile kullanılır.
+Dict(dictionary): key:value çiftleriyle değer tutuluyor. 
+
+kisi= {“isim”: “Ali”, “yaş”:18}
+print(kişi[“isim”] dediğimizde çıktı Ali olacak. 
+
+## Conditionals
+İf, else, elif yapıları var. Koşulların sonuna : konulacak. 
+
+``` Python
+a = 200
+b = 50
+if b > a:
+  print("b a’dan büyüktür.")
+elif a == b:
+  print("a ve b eşittir.")
+else:
+  print("a b’den büyüktür.")
+```
+## Loops
+for loop:
+bir listede sırayla ilerleyerek koşulları uygular.
+meyveler = [“elma”, “armut”, “muz”]
+for meyve in meyveler:
+  print(“Meyve:” ,meyve)
+çıktısı -> 
+Meyve: elma
+Meyve: armut
+Meyve: muz 
+olacak. 
+
+Range ile sayılarla döngü kurabiliriz. 
+for i in range(5)
+ print(i) #0,1,2,3,4 yazdıracak
+
+range(2,10,2) tanımlamasında 2 başlangıç değerini, 10 son değeri, 2’de artış hızını gösteriyor. Yani çıktısı 2,4,6,8 olur. 
+
+String üzerinde
+isim= ‘İlayda’
+for harf in isim:
+  print(harf) #ilayda isminin harflerini sıralayacak
+
+for döngüsüyle break, continue, pass işlemlerini kullanabiliriz.
+```
+for i in range(1, 11):
+    if i == 3:
+        continue  #3’ü atlayıp devam edecek
+    elif i == 6:
+        pass     #bir işlem yapmıyor
+    elif i == 9:
+        break    #9’a gelince program duracak
+    print(f"Sayı: {i}")
+```
+while loop: 
+koşul doğru olana kadar çalıştırılıyor. While True ile sonsuz döngü yapabiliyoruz, genelde break ile çıkılıyor. 
+
+sayi = 0
+while sayi < 5:
+    print(sayi)
+    sayi += 1 #çıktı 0 1 2 3 4 olacak
+
+for da olduğu gibi while döngüsünde de break, continue, pass kullanılabiliyor. 
+
+## Functions:
+Def ile tanımlanır. 
+
+def fonksiyon_adi(parametre1, parametre 2)
+fonksiyonun amacı açıklanır
+return parametre1+parametre 2 
+
+```
+def topla(a,b)
+ return a+b
+ sonuc=topla(2,4)
+print(sonuc)
+```
+
+*args kullanımı
+def toplam(*sayilar):
+    sonuc = 0
+    for s in sayilar:
+        sonuc += s
+    return sonuc
+print(toplam(1, 2, 3, 4))  # çıktı 10 olur
+
+## Classes
+Sınıfı bir şeyi nasıl üreteceğimizi tarif eden bir plan olarak düşünebiliriz. Nesne de o sınıfı kullanarak ürettiğimiz varlıktır. 
+def __init__ : sınıf çağrıldığında otomatik çalışrı
+self: nesnenin kendisini temsil ediyor
+self.hesapno: nesnenin özellikleri
+
+```
+class Ogrenci:
+    okul = "Yıldız Teknik Üniversitesi"  
+
+    def __init__(self, isim, yas):
+        self.isim = isim
+        self.yas = yas
+
+    def bilgileri_goster(self):
+        print(f"{self.isim}, {self.yas} yaşında, {Ogrenci.okul}'nda okuyor.")
+
+ogr1 = Ogrenci("Ali", 20)
+ogr2 = Ogrenci("Ayşe", 22)
+
+ogr1.bilgileri_goster()
+ogr2.bilgileri_goster()
+```
+
 SAYI TAHMİN
 
 ```python
