Fix data types section and print statement syntax
Duplicated data type descriptions and corrected print statement syntax.

--- a/odev_3/23015050_odev_3.md
+++ b/odev_3/23015050_odev_3.md
@@ -1,14 +1,15 @@
 ## Data tipleri
 Data tipleri arasında değişim yapılabiliyor ama c’de olduğu gibi en başından değişkenlerin data tipini tanımlamamıza gerek yok. 
-İnt: tam sayı
-Float: ondalıklı sayı
-Str: metinler
-List: farklı veri tiplerini bir arada tutabiliyoruz. Değiştirilebiliyor. Liste= [1, 2, ‘ilayda’]
-Tuple: listeyle aynı mantıkta ama değiştirilemiyor. () ile kullanılır.
-Dict(dictionary): key:value çiftleriyle değer tutuluyor. 
+- İnt: tam sayı
+- Float: ondalıklı sayı
+- Str: metinler
+- List: farklı veri tiplerini bir arada tutabiliyoruz. Değiştirilebiliyor. Liste= [1, 2, ‘ilayda’]
+- Tuple: listeyle aynı mantıkta ama değiştirilemiyor. () ile kullanılır.
+- Dict(dictionary): key:value çiftleriyle değer tutuluyor. 
 
 kisi= {“isim”: “Ali”, “yaş”:18}
-print(kişi[“isim”] dediğimizde çıktı Ali olacak. 
+print(kişi[“isim”]
+dediğimizde çıktı Ali olacak. 
 
 ## Conditionals
 İf, else, elif yapıları var. Koşulların sonuna : konulacak. 
