Format section headers in markdown file
Updated section headers in the markdown file to use proper formatting.

--- a/odev_3/23015050_odev_3.md
+++ b/odev_3/23015050_odev_3.md
@@ -114,7 +114,7 @@ ogr1.bilgileri_goster()
 ogr2.bilgileri_goster()
 ```
 
-SAYI TAHMİN
+# SAYI TAHMİN
 
 ```python
 import random
@@ -144,7 +144,7 @@ if hak == 0:
 
 
 
-KELİME SAYACI
+# KELİME SAYACI
 
 ```python
 
@@ -168,7 +168,7 @@ for kelime, sayi in kelime_sayilari.items(): #kelimeleri ve kaç kere tekrar ett
     print(f"{kelime}: {sayi}")
 ```
 
-HESAP MAKİNESİ
+# HESAP MAKİNESİ
 ```python
 while True:
     x = float(input("Birinci sayiyi girin: "))
@@ -198,7 +198,7 @@ while True:
         print("Program sonlandirildi.")
         break
 ```
-BANKA HESABI
+# BANKA HESABI
 ```python
 class Hesap:
     def __init__ (self, user, hesapno, bakiye=0):
